update metadata Generated cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -8,6 +8,9 @@ contributor:
     gutenberg_agent_id: '56713'
     url: http://www.gutenberg.org/2009/agents/56713
     wikipedia: https://hu.wikipedia.org/wiki/Balla_Antal_(%C3%BAjs%C3%A1g%C3%ADr%C3%B3)
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Durkheim, Émile
@@ -19,6 +22,8 @@ creator:
     gutenberg_agent_id: '40654'
     url: http://www.gutenberg.org/2009/agents/40654
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72549#A-szociologia-modszere
 gutenberg_issued: '2023-12-30'
 gutenberg_type: Text
 identifiers:
